--- a/stock-wizard/src/features/Chart/ChartView.css
+++ b/stock-wizard/src/features/Chart/ChartView.css
@@ -18,20 +18,23 @@
     font-size: 3em;
 }
 
-.advanced-area {
-    background-color: #f6f6f6;
+.horizontal-display {
     width: 100%;
-    height: fit-content;
-    border-radius: 16px;
-    padding: 24px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 8px
+    flex-direction: row;
+    gap: 20px;
 }
 
-.window-choice {
+.vertical-display {
+    width: 50%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    gap: 20px;
+}
+
+.window {
     background-color: #f6f6f6;
     width: 100%;
     height: fit-content;
@@ -39,13 +42,14 @@
     padding: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
+    gap: 16px;
 }
 
-.window-choice > div {
+.option {
     background-color: white;
-    width: 30%;
+    width: 200px;
     height: fit-content;
     border-radius: 16px;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.16);
@@ -53,4 +57,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.shade {
+    background-color: #dbdbdb;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
 }
